--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,63 @@
 			
 <main>
   <article>
-    <h2>Umi Ryu Karate is goed voor lichaam en geest</h2>
-<p>Karate is een effectieve vechtsport. Door beoefening van karate kunnen eigenschappen als doorzettingsvermogen en zelfbeheersing ontwikkeld worden. Het vormt je karakter en je wordt zelfverzekerder, fitter en energieker. De trainingen versterken je lichaam en geest. Volwassenen en jeugd kunnen op elk moment instappen en zullen al snel in staat zijn zichzelf beter te verdedigen. Kom eens langs in onze <a href="/dojo/">dojo</a> voor een gratis proefles!</p>
+    <h2>Over SPATwater</h2>
+<p>SPATwater bestaat uit een nieuwe generatie enthousiaste hydrologen die met een technische achtergrond nét wat anders kijken naar ruimtelijke opgaven. De uitdagingen zijn enorm, maar de kansen die het biedt nog groter.</p>
+<p>Met expertise op het gebied van waterkwaliteit, de Kaderrichtlijn Water en klimaatadaptatie helpt SPATwater overheden en bedrijven om toekomstbestendig en waterrobuust te worden.</p>
+<p>Wij voeren geen analyse uit zonder handelingsperspectief en bieden zowel creatieve als praktische oplossingen.</p>
+<h2>Expertise</h2>
+<p>### Klimaatadaptatie</p>
+<p><button>Meer informatie</button></p>
+<p>### Waterkwaliteit</p>
+<p><button>Meer informatie</button></p>
+<p>### B-Rain</p>
+<p><button>Meer informatie</button></p>
+<h2>Klimaatadaptatie</h2>
+<p><b>Als meer dan 60% van een gemeente private grond is… dan is het noodzakelijk om deze grond klimaatadaptief te maken.</b></p>
+<p>Ons vertrekpunt is dat een groot deel van een gemeente
+bestaat uit private grond (tuinen, daken, bedrijventerreinen) en dat het absoluut noodzakelijk is dat deze private ruimte klimaatadaptief ingericht moet worden. Elk perceel vraagt om maatwerk, maar het is onmogelijk om elke tuin in te gaan.</p>
+<ul>
+<li>Hoe los jed it probleem op ?</li>
+<li>Hoe zet je subsidiestomen efficiënt in?</li>
+<li>Hoe activeer je bewoners?</li>
+</ul>
+<p><img src="images/projects1.png" alt="project 1"></p>
+<h2>Gemeenten</h2>
+<p><b>Wij kunnen elke bewoner in uw gemeente een persoonlijk klimaatadaptief advies geven zonder elke tuin in te gaan.</b>&gt;</p>
+<p>Wij gebruiken ruimtelijke data en sociale kennis uit de buurt om de gemeente gedetailleerd in kaart te brengen. In combinatie met veldwerk kunnen wij op postcode, buurt of wijkniveau klimaatadaptieve maatregelen personaliseren en prioriteren in de private ruimte. Hiermee maken wij de private ruimte waterrobuust, waterveilig, hitte- en droogtebestendig.</p>
+<h2>Bedrijventerreinen</h2>
+<p>Bedrijventerreinen zijn vaak versteend, privaat terrein met veel oppervlakte. Er liggen enorme uitdagingen maar vooral kansen om deze terreinen klimaatbestendig in te richten en de werkomgeving te verbeteren.</p>
+<p>SPATwater richt zich op het activeren van werknemers en bedrijven door vraag en aanbod op het gebied van water bij elkaar te brengen door middel van ruimtelijke data en geeft handvatten om bedrijventerreinen te vergroenen.</p>
+<p>Hoe doen wij dit?</p>
+<ul>
+<li>Het uitvoeren van stakeholder/netwerk analyses</li>
+<li>Co-creatie sessies organiseren</li>
+<li>Het uitvoeren van restwaterscans</li>
+<li>Het uitvoeren van klimaatanalyses en het koppelen van relevante maatregelen</li>
+</ul>
+<p><img src="images/verg.png" alt="Bedrijventerreinen"></p>
+<h2>Waterkwaliteit</h2>
+<p><b>Wat betekent de Kaderrichtlijn Water voor jou?</b></p>
+<p><img src="images/Aquathermie.png" alt="Aquathermie"></p>
+<p>De Kaderrichtlijn Water (KRW) is een Europese richtlijn die regelt dat oppervlaktewateren en het grondwater van voldoende kwaliteit zijn. Toch voldoen pas enkele wateren aan deze norm. We staan nu op een keerpunt. Binnen 5 jaar, in 2027, moeten alle oppervlaktewateren en ons grondwater voldoen aan de KRW. Vergelijkingen met de stikstofcrisis zijn snel gemaakt, maar de KRW biedt ook kansen in proposities, aanbestedingen en vergunningverlening.</p>
+<p>SPATwater biedt hulp aan organisaties bij het identificeren van de implicaties van de KRW voor hun specifieke situatie. Dit doen wij onder andere door middel van:</p>
+<ul>
+<li>Het verzorgen van kennissessies</li>
+<li>Analyse van huidige KRW-risico’s en kansen</li>
+<li>Propositieverbetering</li>
+</ul>
+<h2>b-RAIN</h2>
+<p><b>b-RAIN is het project rondom het koppelen van weerberichten aan wateropvang/gebruik in de tuin.</b></p>
+<p>Weersextremen in Nederland nemen steeds verder toe. Enerzijds komen in periodes van droogte, watertekorten vaker voor en anderzijds hebben we vaker te maken met extreme neerslag, met wateroverlast tot gevolg.</p>
+<p>B-rain wil bewoners positief betrokken houden bij het bufferen van regenwater en het groen houden van hun tuin. Door enkele gegevens in een app aan te geven, geeft deze app terug wanneer de regenwaterbuffer vol zit, wanneer deze geleegd moet worden (als er bijvoorbeeld een grote regenbui aan komt) en wanneer het lang niet regent (waardoor je zoveel mogelijk water in de regenwaterbuffer wil vasthouden).</p>
+<p><button>Bekijk project</button></p>
+<p><img src="images/bRAIN.png" alt="bRain"></p>
+<h2>Projecten</h2>
+<h2>Kennisbank</h2>
+<h2>Team</h2>
+<p><img src="images/mees1.png" alt="Mees">
+<img src="images/jesse.png" alt="Jesse">
+<img src="images/timo.png" alt="Timo"></p>
 
   </article>
 </main>
