--- a/public/index.html
+++ b/public/index.html
@@ -43,12 +43,32 @@
 <p>Met expertise op het gebied van waterkwaliteit, de Kaderrichtlijn Water en klimaatadaptatie helpt SPATwater overheden en bedrijven om toekomstbestendig en waterrobuust te worden.</p>
 <p>Wij voeren geen analyse uit zonder handelingsperspectief en bieden zowel creatieve als praktische oplossingen.</p>
 <h2>Expertise</h2>
-<p>### Klimaatadaptatie</p>
-<p><button>Meer informatie</button></p>
-<p>### Waterkwaliteit</p>
-<p><button>Meer informatie</button></p>
-<p>### B-Rain</p>
-<p><button>Meer informatie</button></p>
+<section
+  class="expertise section">
+  <div class="expertise__wrapper">
+    <div class="expertise__card">
+      <img class="expertise3" src="assets/Untitled4.png" alt="Illustratie klimaatadaptatie"/>
+      <h3>Klimaatadaptatie</h3>
+      <a href="#klimaat" class="button">
+        <p class="button_text2">Meer informatie</p>
+      </a>
+    </div>
+<p><div class="expertise__card">
+<img class="expertise2" src="assets/Untitled3.png" alt="Illustratie waterkwaliteit"/>
+<h3>Waterkwaliteit</h3>
+<a href="#waterkwaliteit" class="button">
+<p class="button_text2">Meer informatie</p>
+</a>
+</div></p>
+<p><div class="expertise__card">
+<img class="expertise2" src="assets/brainlogo.png" alt="Illustratie B-Rain"/>
+<h3> B-Rain</h3>
+<a href="#brain" class="button">
+<p class="button_text2">Meer informatie</p>
+</a>
+</div></p>
+  </div>
+</section>
 <h2>Klimaatadaptatie</h2>
 <p><b>Als meer dan 60% van een gemeente private grond is… dan is het noodzakelijk om deze grond klimaatadaptief te maken.</b></p>
 <p>Ons vertrekpunt is dat een groot deel van een gemeente
