--- a/public/index.html
+++ b/public/index.html
@@ -53,20 +53,20 @@
         <p class="button_text2">Meer informatie</p>
       </a>
     </div>
-<p><div class="expertise__card">
-<img class="expertise2" src="assets/Untitled3.png" alt="Illustratie waterkwaliteit"/>
-<h3>Waterkwaliteit</h3>
-<a href="#waterkwaliteit" class="button">
-<p class="button_text2">Meer informatie</p>
-</a>
-</div></p>
-<p><div class="expertise__card">
-<img class="expertise2" src="assets/brainlogo.png" alt="Illustratie B-Rain"/>
-<h3> B-Rain</h3>
-<a href="#brain" class="button">
-<p class="button_text2">Meer informatie</p>
-</a>
-</div></p>
+<div class="expertise__card">
+      <img class="expertise2" src="assets/Untitled3.png" alt="Illustratie waterkwaliteit"/>
+      <h3>Waterkwaliteit</h3>
+      <a href="#waterkwaliteit" class="button">
+        <p class="button_text2">Meer informatie</p>
+      </a>
+    </div>
+<div class="expertise__card">
+      <img class="expertise2" src="assets/brainlogo.png" alt="Illustratie B-Rain"/>
+      <h3> B-Rain</h3>
+      <a href="#brain" class="button">
+        <p class="button_text2">Meer informatie</p>
+      </a>
+    </div>
   </div>
 </section>
 <h2>Klimaatadaptatie</h2>
