--- a/public/index.html
+++ b/public/index.html
@@ -43,36 +43,38 @@
 <p>SPATwater bestaat uit een nieuwe generatie enthousiaste hydrologen die met een technische achtergrond nét wat anders kijken naar ruimtelijke opgaven. De uitdagingen zijn enorm, maar de kansen die het biedt nog groter.</p>
 <p>Met expertise op het gebied van waterkwaliteit, de Kaderrichtlijn Water en klimaatadaptatie helpt SPATwater overheden en bedrijven om toekomstbestendig en waterrobuust te worden.</p>
 <p>Wij voeren geen analyse uit zonder handelingsperspectief en bieden zowel creatieve als praktische oplossingen.</p>
+<p><img src="images/tree.png" alt="Tree"></p>
 <h2>Expertise</h2>
 <section
   class="expertise section">
   <div class="expertise__wrapper">
     <div class="expertise__card">
       <img class="expertise3">
-<p><img src="images/Untitled4.png" alt="project 1"></p>
-<p><h3>Klimaatadaptatie</h3>
-<a href="#klimaat" class="button">
-<p class="button_text2">Meer informatie</p>
-</a>
-</div></p>
+<p><img src="images/Untitled4.png" alt="klimaatadaptatie image"></p>
+<h3>Klimaatadaptatie</h3>
+  <a href="#klimaat" class="button">
+        <p class="button_text2">Meer informatie</p>
+      </a>
+    </div>
 <div class="expertise__card">
       <img class="expertise2"/>
-<p><img src="images/Untitled3.png" alt="project 1"></p>
-<p><h3>Waterkwaliteit</h3>
-<a href="#waterkwaliteit" class="button">
+<p><img src="images/Untitled3.png" alt="waterkwaliteit image"></p>
+<h3>Waterkwaliteit</h3>
+<p><a href="#waterkwaliteit" class="button">
 <p class="button_text2">Meer informatie</p>
 </a>
 </div></p>
 <div class="expertise__card">
       <img class="expertise2">
-<p><img src="images/brainlogo.png" alt="project 1"></p>
-<p><h3> B-Rain</h3>
-<a href="#brain" class="button">
-<p class="button_text2">Meer informatie</p>
-</a>
-</div></p>
+<p><img src="images/brainlogo.png" alt="b-rain image"></p>
+<h3>B-Rain</h3>
+  <a href="#brain" class="button">
+        <p class="button_text2">Meer informatie</p>
+      </a>
+    </div>
   </div>
 </section>
+<div class="light-background">
 <h2>Klimaatadaptatie</h2>
 <p><b>Als meer dan 60% van een gemeente private grond is… dan is het noodzakelijk om deze grond klimaatadaptief te maken.</b></p>
 <p>Ons vertrekpunt is dat een groot deel van een gemeente
@@ -83,6 +85,7 @@ bestaat uit private grond (tuinen, daken, bedrijventerreinen) en dat het absoluu
 <li>Hoe activeer je bewoners?</li>
 </ul>
 <p><img src="images/projects1.png" alt="project 1"></p>
+</div>
 <h2>Gemeenten</h2>
 <p><b>Wij kunnen elke bewoner in uw gemeente een persoonlijk klimaatadaptief advies geven zonder elke tuin in te gaan.</b>&gt;</p>
 <p>Wij gebruiken ruimtelijke data en sociale kennis uit de buurt om de gemeente gedetailleerd in kaart te brengen. In combinatie met veldwerk kunnen wij op postcode, buurt of wijkniveau klimaatadaptieve maatregelen personaliseren en prioriteren in de private ruimte. Hiermee maken wij de private ruimte waterrobuust, waterveilig, hitte- en droogtebestendig.</p>
